<resources>
    <string name="app_name" translatable="false">Vialen</string>
    <string name="app_name_long" translatable="false">Vialen for Android</string>
    <string name="app_desc">The universal proxy toolchain for Android, written in Kotlin.</string>
    <string name="project">Project</string>
    <string name="github">Source code</string>
    <string name="telegram">Telegram update channel</string>
    <string name="oss_licenses">Open source licenses</string>
    <string name="app_version">Version</string>
    <string name="version_x">Version (%s)</string>
    <string name="logcat">Export debug information</string>
    <string name="menu_configuration">Configuration</string>
    <string name="menu_group">Group</string>
    <string name="menu_about">About</string>
    <string name="theme">Theme</string>
    <string name="document">Document</string>
    <string name="group_default">Ungrouped</string>
    <string name="quick_toggle">Toggle</string>
    <string name="quick_enable">Enable</string>
    <string name="quick_disable">Disable</string>
    <string name="tile_title">Switcher</string>
    <string name="menu_traffic">Traffic</string>
    <string name="menu_dashboard">sing-box Dashboard</string>
    <string name="action_copy">Copy</string>
    <string name="action_open">Open</string>
    <string name="group_name">Group name</string>
    <string name="group_update">Update</string>
    <string name="group_subscription_link">Subscription Link</string>
    <string name="group_name_required">Group name required</string>
    <string name="group_create">Create group</string>
    <string name="group_create_subscription">Create subscription</string>
    <string name="update_all_subscription">Update all subscriptions</string>
    <string name="group_edit">Edit group</string>
    <string name="group_edit_subscription">Edit subscription</string>
    <string name="group_status_empty">Empty group</string>
    <string name="group_status_empty_subscription">Not updated yet</string>
    <string name="group_status_proxies">%d Proxies</string>
    <string name="group_status_proxies_subscription">%d Proxies | Updated on %s</string>
    <string name="group_no_difference">%s: No difference</string>
    <string name="group_updated">%s: Updated %d proxies</string>
    <string name="group_show_diff">Diff</string>
    <string name="group_diff">Diff (%s)</string>
    <string name="group_delete_confirm_prompt">Are you sure you want to remove this group?</string>
    <string name="group_added">Added: \n%s</string>
    <string name="group_changed">Updated: \n%s</string>
    <string name="group_deleted">Deleted: \n%s</string>
    <string name="group_duplicate">Duplicate: \n%s</string>
    <string name="service_mode">Service Mode</string>
    <string name="service_mode_proxy">Proxy only</string>
    <string name="service_mode_vpn" translatable="false">VPN</string>
    <string name="port_proxy">Proxy Port</string>
    <string name="port_http">HTTP Proxy Port</string>
    <string name="port_transproxy">Transproxy Port</string>
    <string name="cag_route">Route Settings</string>
    <string name="allow_access">Allow Connections from the LAN</string>
    <string name="allow_access_sum">Bind inbound servers to 0.0.0.0</string>
    <string name="inbound_settings">Inbound Settings</string>
    <string name="general_settings">App Settings</string>
    <string name="require_http">Enable HTTP inbound</string>
    <string name="cag_ws">WebSocket Settings</string>
    <string name="ws_max_early_data" translatable="false">Max early data</string>
    <string name="ws_browser_forwarding">Browser Forwarding</string>
    <string name="ws_browser_forwarding_sum">Forward corresponding WebSockets through the browser.</string>
    <string name="speed_interval">Speed Notification Update Interval</string>
    <string name="cag_misc">Misc Settings</string>
    <string name="show_stop">Show Stop Button</string>
    <string name="show_stop_sum">If you don’t want to use Quick Tile as the switch</string>
    <string name="show_direct_speed">Show Direct Speed</string>
    <string name="show_direct_speed_sum">Show the traffic speed without proxy in the notification as
        well</string>
    <string name="security_settings">TLS Security Settings</string>
    <string name="allow_insecure">Allow Insecure</string>
    <string name="allow_insecure_sum">Disable certificate checking. When enabled, this configuration
        is as secure as plaintext</string>
    <string name="traffic" translatable="false">%1$s↑ %2$s↓</string>
    <string name="speed_detail">Proxy： %1$s↑ %2$s↓\nDirect： %3$s↑ %4$s↓</string>
    <string name="speed">%s/s</string>
    <string name="connection_test_testing">Testing…</string>
    <string name="connection_test_available">Success: HTTPS handshake took %dms</string>
    <string name="connection_test_available_http">Success: HTTP handshake took %dms</string>
    <string name="connection_test_error">Failed: %s</string>
    <string name="connection_test_fail">Internet Unavailable</string>
    <string name="connection_test_error_status_code">Error code: #%d</string>
    <string name="cag_dns">DNS Settings</string>
    <string name="remote_dns">Remote DNS</string>
    <string name="direct_dns">Direct DNS</string>
    <string name="enable_dns_routing">Enable DNS Routing</string>
    <string name="dns_routing_message">Resolve domains in bypass routes with Direct DNS. Be aware of
        potential DNS leaks</string>
    <string name="enable_fakedns">Enable FakeDNS</string>
    <string name="fakedns_message">May cause other applications need to be restarted to reconnect to
        the network after proxy stopped</string>
    <string name="dns_hosts">Domain rewrite</string>
    <string name="port_local_dns">Local DNS Port</string>
    <string name="require_transproxy">Enable Transproxy Inbound</string>
    <string name="transproxy_mode">Transproxy Mode</string>
    <string name="connection_test_url">Connection Test URL</string>
    <string name="profile_name">Profile Name</string>
    <string name="server_address">Server</string>
    <string name="server_port">Remote Port</string>
    <string name="username">Username</string>
    <string name="username_opt">Username (Optional)</string>
    <string name="password_opt">Password (Optional)</string>
    <string name="key_opt">Key (Optional)</string>
    <string name="password">Password</string>
    <string name="enc_method">Encrypt Method</string>
    <string name="protocol">Protocol</string>
    <string name="protocol_param">Protocol Param</string>
    <string name="obfs">Obfs</string>
    <string name="obfs_param">Obfs Param</string>
    <string name="uuid">User ID</string>
    <string name="alter_id">Alter ID</string>
    <string name="security">Transport layer encryption</string>
    <string name="network">Network</string>
    <string name="header_type">Header Type</string>
    <string name="http_host">HTTP Host</string>
    <string name="http_path">HTTP Path</string>
    <string name="sni">Server Name Indication</string>
    <string name="alpn">Application-Layer Protocol Negotiation</string>
    <string name="certificates">Certificates</string>
    <string name="early_data_header_name">Early Data Header Name</string>
    <string name="encryption">Encryption</string>
    <string name="enable_mux">Enable Multiplexer</string>
    <string name="mux_sum">Mux is designed to reduce TCP handshake latency, not to increase
        connection throughput. Using Mux to watch videos, download or speed test is usually counter
        productive. If the server does not support it, you will not be able to access the Internet.</string>
    <string name="mux_concurrency">Mux Concurrent Connections</string>
    <string name="deduplication">Deduplication</string>
    <string name="proxy_cat">Server Settings</string>
    <string name="enable">Enable</string>
    <string name="clear_traffic_statistics">Clear traffic statistics</string>
    <string name="connection_test_clear_results">Clear test results</string>
    <string name="connection_test_tcp_ping" translatable="false">TCPing</string>
    <string name="connection_test_url_test" translatable="false">URL Test</string>
    <string name="subscription_settings">Subscription Settings</string>
    <string name="group_type">Group Type</string>
    <string name="force_resolve">Force Resolve</string>
    <string name="force_resolve_sum">Resolve all domain names to IP addresses when updating. Host
        and SNI will be automatically appended if possible</string>
    <string name="deduplication_sum">Remove duplicate configurations when updating</string>
    <string name="update_settings">Update Settings</string>
    <string name="auto_update">Auto Update</string>
    <string name="auto_update_delay">Auto Update Delay (In minutes)</string>
    <string name="update_when_connected_only">Update only when connected</string>
    <string name="update_when_connected_only_sum">Prevent IP address leakage</string>
    <string name="subscription_user_agent">UserAgent</string>
    <string name="hysteria_obfs">Obfuscation Password</string>
    <string name="hysteria_auth_type">Authentication Type</string>
    <string name="hysteria_auth_payload">Authentication Payload</string>
    <string name="hysteria_upload_mbps">Max Upload Speed (in Mbps)</string>
    <string name="hysteria_download_mbps">Max Download Speed (in Mbps)</string>
    <string name="hysteria_stream_receive_window">QUIC Stream Receive Window</string>
    <string name="hysteria_connection_receive_window">QUIC Connection Receive Window</string>
    <string name="hysteria_disable_mtu_discovery">Disable Path MTU Discovery</string>
    <string name="group_order">Order</string>
    <string name="group_order_origin">Origin</string>
    <string name="group_order_by_name">By Name</string>
    <string name="group_order_by_delay">By Delay</string>
    <string name="ssh_private_key">Private Key</string>
    <string name="wireguard_local_address">Local Address</string>
    <string name="wireguard_public_key">Peer Public Key</string>
    <string name="wireguard_psk">Peer Pre-Shared Key</string>
    <string name="mtu" translatable="false">MTU</string>
    <string name="packet_encoding">Packet Encoding</string>
    <string name="tuic_udp_relay_mode">UDP Relay Mode</string>
    <string name="tuic_congestion_controller">Congestion Controller</string>
    <string name="tuic_disable_sni">Disable SNI</string>
    <string name="tuic_reduce_rtt">Enable 0-RTT QUIC handshake</string>
    <string name="connection_test_delete_unavailable">Clear unavailable</string>
    <string name="hop_interval">Port Hopping Interval(second)</string>
    <string name="utls_fingerprint">uTLS fingerprint</string>
    <string name="front_proxy">Front proxy</string>
    <string name="landing_proxy">Landing Proxy</string>
    <string name="protocol_version">Protocol Version</string>
    <string name="remove_duplicate">Remove duplicate servers</string>
    <string name="tls_camouflage_settings">TLS Camouflage Settings</string>
    <string name="mux_type">Mux protocol</string>
    <string name="ech_config">ECH Config</string>
    <string name="update_current_subscription">Update current Group\'s subscription</string>
    <string name="mux_preference">Mulitplex</string>
    <string name="padding">Padding</string>
    <string name="route_advanced">Advanced</string>
    <string name="disable_chrome_parrot">Disable Chrome QUIC mimic</string>
    <string name="disable_chrome_parrot_sum">Only disable if the Hysteria2 server is incompatible with Chrome-style QUIC.</string>
    <string name="bbr_profile">BBR Profile</string>
    <string name="hop_interval_max">Maximum Hop Interval (s)</string>
    <string name="hysteria_obfs_type">Obfuscation Type</string>
    <string name="obfs_min_packet_size">Min Packet Size (Gecko)</string>
    <string name="obfs_max_packet_size">Max Packet Size (Gecko)</string>
</resources>