<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">
    <EditTextPreference app:key="profileName" app:title="@string/profile_name" app:useSimpleSummaryProvider="true" />
    <moe.matsuri.nb4a.ui.SimpleMenuPreference app:defaultValue="2" app:entries="@array/hysteria_version" app:entryValues="@array/hysteria_version" app:key="protocolVersion" app:title="@string/protocol_version" app:useSimpleSummaryProvider="true" />
    <PreferenceCategory app:title="@string/proxy_cat">
        <EditTextPreference app:key="serverAddress" app:title="@string/server_address" app:useSimpleSummaryProvider="true" />
        <EditTextPreference app:key="serverPorts" app:title="@string/server_port" app:useSimpleSummaryProvider="true" />
        <EditTextPreference app:dialogLayout="@layout/layout_password_dialog" app:key="serverObfs" app:title="@string/hysteria_obfs" app:useSimpleSummaryProvider="true" />
        <moe.matsuri.nb4a.ui.SimpleMenuPreference app:entries="@array/hysteria_auth_type" app:entryValues="@array/int_array_3" app:key="serverAuthType" app:title="@string/hysteria_auth_type" app:useSimpleSummaryProvider="true" />
        <EditTextPreference app:dialogLayout="@layout/layout_password_dialog" app:key="serverPassword" app:title="@string/hysteria_auth_payload" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/security_settings">
        <EditTextPreference app:key="serverSNI" app:title="@string/sni" app:useSimpleSummaryProvider="true" />
        <EditTextPreference app:key="serverALPN" app:title="@string/alpn" app:useSimpleSummaryProvider="true" />
        <EditTextPreference app:key="serverCertificates" app:title="@string/certificates" app:useSimpleSummaryProvider="true" />
        <SwitchPreference app:key="serverAllowInsecure" app:summary="@string/allow_insecure_sum" app:title="@string/allow_insecure" />
    </PreferenceCategory>
    <PreferenceCategory app:title="@string/ui_transport">
        <EditTextPreference app:key="serverUploadSpeed" app:title="@string/hysteria_upload_mbps" app:useSimpleSummaryProvider="true" />
        <EditTextPreference app:key="serverDownloadSpeed" app:title="@string/hysteria_download_mbps" app:useSimpleSummaryProvider="true" />
        <EditTextPreference app:key="serverStreamReceiveWindow" app:title="@string/hysteria_stream_receive_window" app:useSimpleSummaryProvider="true" />
        <EditTextPreference app:key="serverConnectionReceiveWindow" app:title="@string/hysteria_connection_receive_window" app:useSimpleSummaryProvider="true" />
        <SwitchPreference app:key="serverDisableMtuDiscovery" app:title="@string/hysteria_disable_mtu_discovery" />
        <EditTextPreference app:key="hopInterval" app:title="@string/hop_interval" app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>
    <PreferenceCategory app:key="hysteria2AdvancedCategory" app:title="@string/route_advanced">
        <moe.matsuri.nb4a.ui.SimpleMenuPreference app:defaultValue="" app:entries="@array/hysteria2_bbr_profile_entries" app:entryValues="@array/hysteria2_bbr_profile_values" app:key="serverBbrProfile" app:title="@string/bbr_profile" app:useSimpleSummaryProvider="true" />
        <SwitchPreference app:defaultValue="false" app:key="serverDisableChromeParrot" app:summary="@string/disable_chrome_parrot_sum" app:title="@string/disable_chrome_parrot" />
        <EditTextPreference app:key="hopIntervalMax" app:title="@string/hop_interval_max" app:useSimpleSummaryProvider="true" />
        <moe.matsuri.nb4a.ui.SimpleMenuPreference app:defaultValue="salamander" app:entries="@array/hysteria2_obfs_type_entries" app:entryValues="@array/hysteria2_obfs_type_values" app:key="serverObfsType" app:title="@string/hysteria_obfs_type" app:useSimpleSummaryProvider="true" />
        <EditTextPreference app:defaultValue="512" app:key="serverObfsMinPacketSize" app:title="@string/obfs_min_packet_size" app:useSimpleSummaryProvider="true" />
        <EditTextPreference app:defaultValue="1200" app:key="serverObfsMaxPacketSize" app:title="@string/obfs_max_packet_size" app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>
</PreferenceScreen>
