<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">
    <EditTextPreference app:key="profileName" app:title="@string/profile_name" app:useSimpleSummaryProvider="true" />
    <PreferenceCategory app:title="@string/proxy_cat">
        <EditTextPreference app:key="serverAddress" app:title="@string/server_address" app:useSimpleSummaryProvider="true" />
        <EditTextPreference app:key="serverPort" app:title="@string/server_port" app:useSimpleSummaryProvider="true" />
        <EditTextPreference app:key="serverUsername" app:title="@string/uuid" app:useSimpleSummaryProvider="true" />
        <EditTextPreference app:dialogLayout="@layout/layout_password_dialog" app:key="serverPassword" app:title="@string/password" />
    </PreferenceCategory>
    <PreferenceCategory app:title="@string/security_settings">
        <EditTextPreference app:key="serverALPN" app:title="@string/alpn" app:useSimpleSummaryProvider="true" />
        <EditTextPreference app:key="serverCertificates" app:title="@string/certificates" app:useSimpleSummaryProvider="true" />
        <SwitchPreference app:key="serverDisableSNI" app:title="@string/tuic_disable_sni" />
        <EditTextPreference app:key="serverSNI" app:title="@string/sni" app:useSimpleSummaryProvider="true" />
        <SwitchPreference app:key="serverAllowInsecure" app:title="@string/allow_insecure" />
    </PreferenceCategory>
    <PreferenceCategory app:title="@string/ui_transport">
        <moe.matsuri.nb4a.ui.SimpleMenuPreference app:defaultValue="https" app:entries="@array/tuic_udp_relay_mode_value" app:entryValues="@array/tuic_udp_relay_mode_value" app:key="serverUDPRelayMode" app:title="@string/tuic_udp_relay_mode" app:useSimpleSummaryProvider="true" />
        <moe.matsuri.nb4a.ui.SimpleMenuPreference app:defaultValue="https" app:entries="@array/tuic_congestion_controller_value" app:entryValues="@array/tuic_congestion_controller_value" app:key="serverCongestionController" app:title="@string/tuic_congestion_controller" app:useSimpleSummaryProvider="true" />
        <SwitchPreference app:key="serverReduceRTT" app:title="@string/tuic_reduce_rtt" />
    </PreferenceCategory>
</PreferenceScreen>
