<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <EditTextPreference
        app:key="name"
        app:title="@string/profile_name"
        app:useSimpleSummaryProvider="true" />

    <PreferenceCategory app:title="@string/proxy_cat">

        <EditTextPreference
            app:key="serverAddress"
            app:title="@string/server_address"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            app:key="serverPort"
            app:title="@string/server_port"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            app:key="username"
            app:title="@string/username_opt"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            app:dialogLayout="@layout/layout_password_dialog"
            app:key="password"
            app:title="@string/password_opt" />
        <EditTextPreference
            app:dialogLayout="@layout/layout_password_dialog"
            app:key="uuid"
            app:title="@string/uuid" />
        <EditTextPreference
            app:key="alterId"
            app:title="@string/alter_id"
            app:useSimpleSummaryProvider="true" />
        <moe.matsuri.nb4a.ui.SimpleMenuPreference
            app:entries="@array/vmess_encryption_value"
            app:entryValues="@array/vmess_encryption_value"
            app:key="encryption"
            app:title="@string/encryption"
            app:useSimpleSummaryProvider="true" />
        <moe.matsuri.nb4a.ui.SimpleMenuPreference
            app:entries="@array/packet_encoding_entry"
            app:entryValues="@array/int_array_3"
            app:key="packetEncoding"
            app:title="@string/packet_encoding"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/ui_transport">
        <moe.matsuri.nb4a.ui.SimpleMenuPreference
            app:entries="@array/networks_value"
            app:entryValues="@array/networks_value"
            app:key="type"
            app:title="@string/network"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            app:key="host"
            app:title="@string/http_host"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            app:key="path"
            app:title="@string/http_path"
            app:useSimpleSummaryProvider="true" />
        <moe.matsuri.nb4a.ui.SimpleMenuPreference
            app:entries="@array/transport_layer_encryption_value"
            app:entryValues="@array/transport_layer_encryption_value"
            app:key="security"
            app:title="@string/security"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>

    <PreferenceCategory
        app:key="serverWsCategory"
        app:title="@string/cag_ws">
        <EditTextPreference
            app:defaultValue="0"
            app:key="wsMaxEarlyData"
            app:title="@string/ws_max_early_data"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:key="earlyDataHeaderName"
            app:title="@string/early_data_header_name"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>

    <PreferenceCategory
        app:key="serverSecurityCategory"
        app:title="@string/security_settings">
        <EditTextPreference
            app:key="sni"
            app:title="@string/sni"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            app:key="alpn"
            app:title="@string/alpn"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            app:key="certificates"
            app:title="@string/certificates"
            app:useSimpleSummaryProvider="true" />
        <SwitchPreference
            app:key="allowInsecure"
            app:summary="@string/allow_insecure_sum"
            app:title="@string/allow_insecure" />
    </PreferenceCategory>

    <PreferenceCategory
        app:key="serverTlsCamouflageCategory"
        app:title="@string/tls_camouflage_settings">
        <moe.matsuri.nb4a.ui.SimpleMenuPreference
            app:defaultValue=""
            app:entries="@array/utls_fingerprint_entry"
            app:entryValues="@array/utls_fingerprint_entry"
            app:key="utlsFingerprint"
            app:title="@string/utls_fingerprint"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            app:key="realityPubKey"
            app:title="Reality Public Key"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            app:key="realityShortId"
            app:title="Reality ShortId"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>

    <PreferenceCategory
        app:key="serverMuxCategory"
        app:title="@string/mux_preference">
        <SwitchPreference
            app:key="enableMux"
            app:summary="@string/mux_sum"
            app:title="@string/enable_mux" />
        <moe.matsuri.nb4a.ui.SimpleMenuPreference
            app:defaultValue="0"
            app:entries="@array/mux_type"
            app:entryValues="@array/int_array_3"
            app:key="muxType"
            app:title="@string/mux_type"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            app:defaultValue="1"
            app:key="muxConcurrency"
            app:title="@string/mux_concurrency"
            app:useSimpleSummaryProvider="true" />
        <SwitchPreference
            app:key="muxPadding"
            app:title="@string/padding" />
    </PreferenceCategory>

    <PreferenceCategory
        app:key="serverECHCategory"
        app:title="ECH">
        <SwitchPreference
            app:key="enableECH"
            app:title="@string/enable" />
        <EditTextPreference
            app:key="echConfig"
            app:title="@string/ech_config"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>

</PreferenceScreen>
