<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">
    <EditTextPreference app:key="groupName" app:title="@string/group_name" app:useSimpleSummaryProvider="true" />
    <moe.matsuri.nb4a.ui.SimpleMenuPreference app:defaultValue="0" app:entries="@array/group_types" app:entryValues="@array/int_array_2" app:key="groupType" app:title="@string/group_type" app:useSimpleSummaryProvider="true" />
    <PreferenceCategory app:key="groupSubscription" app:title="@string/subscription_settings">
        <io.nekohasekai.sagernet.widget.LinkOrContentPreference app:key="subscriptionLink" app:title="@string/group_subscription_link" app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>
    <PreferenceCategory app:key="subscriptionUpdate" app:title="@string/update_settings">
        <SwitchPreference app:key="subscriptionUpdateWhenConnectedOnly" app:summary="@string/update_when_connected_only_sum" app:title="@string/update_when_connected_only" />
        <io.nekohasekai.sagernet.widget.UserAgentPreference app:key="subscriptionUserAgent" app:title="@string/subscription_user_agent" app:useSimpleSummaryProvider="true" />
        <SwitchPreference app:key="subscriptionAutoUpdate" app:title="@string/auto_update" />
        <EditTextPreference app:defaultValue="1440" app:key="subscriptionAutoUpdateDelay" app:title="@string/auto_update_delay" app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>
    <PreferenceCategory app:key="uiGroupAdvanced" app:title="@string/ui_advanced" app:initialExpandedChildrenCount="0">
        <moe.matsuri.nb4a.ui.SimpleMenuPreference app:defaultValue="0" app:entries="@array/group_orders" app:entryValues="@array/int_array_3" app:key="groupOrder" app:title="@string/group_order" app:useSimpleSummaryProvider="true" />
        <SwitchPreference app:key="groupIsSelector" app:title="@string/ui_use_selector" app:summary="@string/ui_use_selector_help" />
        <io.nekohasekai.sagernet.widget.OutboundPreference app:key="groupFrontProxy" app:title="@string/front_proxy" app:useSimpleSummaryProvider="true" />
        <io.nekohasekai.sagernet.widget.OutboundPreference app:key="groupLandingProxy" app:title="@string/landing_proxy" app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>
    <PreferenceCategory app:key="uiSubscriptionAdvanced" app:title="@string/subscription_settings" app:initialExpandedChildrenCount="0">
        <SwitchPreference app:key="subscriptionForceResolve" app:summary="@string/force_resolve_sum" app:title="@string/force_resolve" />
        <SwitchPreference app:key="subscriptionDeduplication" app:summary="@string/deduplication_sum" app:title="@string/deduplication" />
    </PreferenceCategory>
</PreferenceScreen>
