<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">
    <EditTextPreference app:key="name" app:title="@string/profile_name" app:useSimpleSummaryProvider="true" />
    <PreferenceCategory app:title="@string/proxy_cat">
        <EditTextPreference app:key="serverAddress" app:title="@string/server_address" app:useSimpleSummaryProvider="true" />
        <EditTextPreference app:key="serverPort" app:title="@string/server_port" app:useSimpleSummaryProvider="true" />
        <EditTextPreference app:key="localAddress" app:title="@string/wireguard_local_address" app:useSimpleSummaryProvider="true" />
        <EditTextPreference app:key="privateKey" app:title="@string/ssh_private_key" app:useSimpleSummaryProvider="true" />
        <EditTextPreference app:key="peerPublicKey" app:title="@string/wireguard_public_key" app:useSimpleSummaryProvider="true" />
        <EditTextPreference app:dialogLayout="@layout/layout_password_dialog" app:key="peerPreSharedKey" app:title="@string/wireguard_psk" />
    </PreferenceCategory>
    <PreferenceCategory app:title="@string/ui_advanced">
        <EditTextPreference app:defaultValue="1420" app:key="mtu" app:title="@string/mtu" app:useSimpleSummaryProvider="true" />
        <EditTextPreference app:key="reserved" app:title="Reserved" app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>
</PreferenceScreen>
