<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <EditTextPreference
        app:key="profileName"
        app:title="@string/profile_name"
        app:useSimpleSummaryProvider="true" />

    <PreferenceCategory app:title="@string/proxy_cat">
        <moe.matsuri.nb4a.ui.SimpleMenuPreference
            app:defaultValue="2"
            app:entries="@array/socks_versions"
            app:entryValues="@array/int_array_3"
            app:key="serverProtocol"
            app:title="@string/app_version"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:key="serverAddress"
            app:title="@string/server_address"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            app:key="serverPort"
            app:title="@string/server_port"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            app:key="serverUsername"
            app:title="@string/username_opt"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            app:dialogLayout="@layout/layout_password_dialog"
            app:key="serverPassword"
            app:title="@string/password_opt" />
    </PreferenceCategory>

    <PreferenceCategory app:title="sing-box server">
        <SwitchPreference
            app:key="sUoT"
            app:title="UDP over TCP" />
    </PreferenceCategory>
</PreferenceScreen>
